Fixed annoying line-wrapping for MMA results details.

--- a/src/main/webapp/css/mma.css
+++ b/src/main/webapp/css/mma.css
@@ -108,9 +108,8 @@ body {
 }
 #mma-resultDetailsTable td {
 }
-#mma-resultDetailsTable td .enc-date {
-  word-break: keep-all;
-  -ms-word-break: keep-all;
+#mma-resultDetailsTable td .nowrap {
+  white-space: nowrap;
 }
 #mma-resultDetailsTable a {
   text-decoration: none;
